--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,3 @@
-password = "hitish_test"
+API_KEY = "tXdYwmLL.1Mn3KLlFrVukTNhjkQQUhRQYF8UjQcYr"
+API_URL = "https://model-vq0mvky3.api.baseten.co/development/predict"
+PASSWORD = "hitish_test"
